# heli-rescue

./: .gitignore  AGENTS.md  Makefile  README.md  SUMMARY.md  TASK.md  WORKFLOW_STATE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  test.yml
.opencode/agents/: commit-message.md  debater.md  implementor.md  linter.md  planner.md  reviewer.md  security-reviewer.md  tester.md
tests/: conftest.py  test_entities.py  test_utility.py
tunes/: Cheating Engine Tune 1.vgz  Delight Loader.vgz  Old 64-Style.vgz  README.md
