[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "heli-rescue"
version = "1.0.0"
description = "8-bit side-scrolling helicopter rescue game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5,<3",
    "ymfm-py>=0.2,<0.3",
]

[project.urls]
Repository = "https://github.com/example/heli-rescue"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
